--- a/index.html
+++ b/index.html
@@ -4904,7 +4904,7 @@ function triggerT80Cannon() {
         amount:   10,
         targets:  { self:1, one:0.0, all:0 }
       }},
-	  { src: "images/zombie_search_sprite_healer.png", unlock: "銅墻鐵壁",
+	  { src: "images/zombie_search_sprite_healer.png", unlock: "挑戰者",
 		combat: {
 		pvp: { hit:-0.3, dmgMax:-0.3, hp:0.3, dmgTaken:-0.3 },
 		pve: { hit:-0.6, dmgMax:-0.6, hp:0.6, dmgTaken:-0.6 }
